chrome/renderer/autofill/fake_password_manager_client.cc
@@ -7,7 +7,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 FakePasswordManagerClient::FakePasswordManagerClient() : binding_(this) {}
 
-FakePasswordManagerClient::~FakePasswordManagerClient() {}
+FakePasswordManagerClient::~FakePasswordManagerClient() = default;
 
 void FakePasswordManagerClient::BindRequest(
     autofill::mojom::PasswordManagerClientAssociatedRequest request) {
@@ -33,10 +33,6 @@ void FakePasswordManagerClient::ShowManualPasswordGenerationPopup(
     const autofill::password_generation::PasswordGenerationUIData& ui_data) {
   called_show_manual_pw_generation_popup_ = true;
 }
-
-void FakePasswordManagerClient::ShowPasswordEditingPopup(
-    const gfx::RectF& bounds,
-    const autofill::PasswordForm& form) {}
 
 void FakePasswordManagerClient::GenerationAvailableForForm(
     const autofill::PasswordForm& form) {
