chrome/renderer/autofill/password_generation_agent_browsertest.cc
@@ -39,6 +39,7 @@ using blink::WebElement;
 using blink::WebInputElement;
 using blink::WebNode;
 using blink::WebString;
+using testing::_;
 
 namespace autofill {
 
@@ -456,6 +457,7 @@ TEST_F(PasswordGenerationAgentTest, EditingTest) {
   EXPECT_CALL(fake_pw_client_,
               PresaveGeneratedPassword(testing::Field(
                   &autofill::PasswordForm::password_value, edited_password)));
+  EXPECT_CALL(fake_pw_client_, ShowPasswordEditingPopup(_, _));
   SimulateUserInputChangeForElement(&first_password_element,
                                     edited_password_ascii);
   EXPECT_EQ(edited_password, first_password_element.Value().Utf16());
@@ -476,6 +478,58 @@ TEST_F(PasswordGenerationAgentTest, EditingTest) {
   // and trigger generation again.
   base::RunLoop().RunUntilIdle();
   EXPECT_TRUE(GetCalledAutomaticGenerationStatusChangedTrue());
+}
+
+TEST_F(PasswordGenerationAgentTest, EditingEventsTest) {
+  LoadHTMLWithUserGesture(kAccountCreationFormHTML);
+  SetNotBlacklistedMessage(password_generation_, kAccountCreationFormHTML);
+  SetAccountCreationFormsDetectedMessage(password_generation_,
+                                         GetMainFrame()->GetDocument(), 0, 1);
+
+  // Generate password.
+  FocusField("first_password");
+  base::string16 password = base::ASCIIToUTF16("random_password");
+  EXPECT_CALL(fake_pw_client_,
+              PresaveGeneratedPassword(testing::Field(
+                  &autofill::PasswordForm::password_value, password)));
+  password_generation_->GeneratedPasswordAccepted(password);
+  fake_pw_client_.Flush();
+  fake_pw_client_.reset_called_automatic_generation_status_changed_true();
+  testing::Mock::VerifyAndClearExpectations(&fake_pw_client_);
+
+  // Start removing characters one by one and observe the events sent to the
+  // browser.
+  EXPECT_CALL(fake_pw_client_, ShowPasswordEditingPopup(_, _));
+  FocusField("first_password");
+  fake_pw_client_.Flush();
+  testing::Mock::VerifyAndClearExpectations(&fake_pw_client_);
+  size_t max_chars_to_delete_before_editing =
+      password.length() -
+      PasswordGenerationAgent::kMinimumLengthForEditedPassword;
+  for (size_t i = 0; i < max_chars_to_delete_before_editing; ++i) {
+    password.erase(password.end() - 1);
+    EXPECT_CALL(fake_pw_client_,
+                PresaveGeneratedPassword(testing::Field(
+                    &autofill::PasswordForm::password_value, password)));
+    SimulateUserTypingASCIICharacter(ui::VKEY_BACK, true);
+    fake_pw_client_.Flush();
+    fake_driver_.Flush();
+    EXPECT_TRUE(fake_driver_.last_focused_element_was_fillable());
+    EXPECT_TRUE(fake_driver_.last_focused_input_was_password());
+    testing::Mock::VerifyAndClearExpectations(&fake_pw_client_);
+  }
+
+  // Delete one more character and move back to the generation state.
+  EXPECT_CALL(fake_pw_client_, PasswordNoLongerGenerated(_));
+  SimulateUserTypingASCIICharacter(ui::VKEY_BACK, true);
+  fake_pw_client_.Flush();
+  // The remaining characters no longer count as a generated password, so
+  // generation should be offered again.
+  EXPECT_TRUE(GetCalledAutomaticGenerationStatusChangedTrue());
+  // Last focused element shouldn't change while editing.
+  fake_driver_.Flush();
+  EXPECT_TRUE(fake_driver_.last_focused_element_was_fillable());
+  EXPECT_TRUE(fake_driver_.last_focused_input_was_password());
 }
 
 TEST_F(PasswordGenerationAgentTest, BlacklistedTest) {
@@ -605,6 +659,7 @@ TEST_F(PasswordGenerationAgentTest, MinimumLengthForEditedPassword) {
   testing::Mock::VerifyAndClearExpectations(&fake_pw_client_);
 
   // Delete most of the password.
+  EXPECT_CALL(fake_pw_client_, ShowPasswordEditingPopup(_, _));
   FocusField("first_password");
   size_t max_chars_to_delete =
       password.length() -
@@ -828,6 +883,7 @@ TEST_F(PasswordGenerationAgentTest, PresavingGeneratedPassword) {
     password_generation_->GeneratedPasswordAccepted(password);
     base::RunLoop().RunUntilIdle();
 
+    EXPECT_CALL(fake_pw_client_, ShowPasswordEditingPopup(_, _));
     FocusField(test_case.generation_element);
     EXPECT_CALL(fake_pw_client_, PresaveGeneratedPassword(testing::_));
     SimulateUserTypingASCIICharacter('a', true);
@@ -838,6 +894,7 @@ TEST_F(PasswordGenerationAgentTest, PresavingGeneratedPassword) {
     SimulateUserTypingASCIICharacter('X', true);
     base::RunLoop().RunUntilIdle();
 
+    EXPECT_CALL(fake_pw_client_, ShowPasswordEditingPopup(_, _));
     FocusField(test_case.generation_element);
     EXPECT_CALL(fake_pw_client_, PasswordNoLongerGenerated(testing::_));
     for (size_t i = 0; i < password.length(); ++i)
@@ -950,7 +1007,9 @@ TEST_F(PasswordGenerationAgentTest, RevealPassword) {
   for (bool clickOnInputField : kFalseTrue) {
     SCOPED_TRACE(testing::Message("clickOnInputField = ") << clickOnInputField);
     // Click on the generation field to reveal the password value.
+    EXPECT_CALL(fake_pw_client_, ShowPasswordEditingPopup(_, _));
     FocusField(kGenerationElementId);
+    fake_pw_client_.Flush();
 
     WebDocument document = GetMainFrame()->GetDocument();
     blink::WebElement element = document.GetElementById(
@@ -1130,6 +1189,7 @@ TEST_F(PasswordGenerationAgentTest, PasswordUnmaskedUntilCompleteDeletion) {
   // Delete characters of the generated password until only
   // |kMinimumLengthForEditedPassword| - 1 chars remain.
   fake_pw_client_.reset_called_automatic_generation_status_changed_true();
+  EXPECT_CALL(fake_pw_client_, ShowPasswordEditingPopup(_, _));
   FocusField(kGenerationElementId);
   EXPECT_CALL(fake_pw_client_, PasswordNoLongerGenerated(testing::_));
   size_t max_chars_to_delete =
@@ -1180,6 +1240,7 @@ TEST_F(PasswordGenerationAgentTest, ShortPasswordMaskedAfterChangingFocus) {
   // Delete characters of the generated password until only
   // |kMinimumLengthForEditedPassword| - 1 chars remain.
   fake_pw_client_.reset_called_automatic_generation_status_changed_true();
+  EXPECT_CALL(fake_pw_client_, ShowPasswordEditingPopup(_, _));
   FocusField(kGenerationElementId);
   EXPECT_CALL(fake_pw_client_, PasswordNoLongerGenerated(testing::_));
   size_t max_chars_to_delete =
